[oss-fuzz 42503720] Integer-overflow in vlc_tick_from_samples

Ref: https://issues.oss-fuzz.com/issues/42503720

xeon ~/work/git/vlc/build-ubsan $ UBSAN_OPTIONS=print_stacktrace=1:halt_on_error=1 ./test/vlc-demux-dec-run /home/tom/Downloads/clusterfuzz-*                                                                                      

../../include/vlc_tick.h:106:23: runtime error: signed integer overflow: 17312944995840 * 1000000 cannot be represented in type 'long int'
    #0 0x7f13ad45b2a5 in vlc_tick_from_samples ../../include/vlc_tick.h:106
    #1 0x7f13ad45b2a5 in FLAC_ParseSyncInfo ../../modules/packetizer/flac.h:293
    #2 0x7f13ad45d0a2 in Packetize ../../modules/packetizer/flac.c:431
    #3 0x7f13af8347a6 in GetPacketizedBlock ../../modules/demux/flac.c:226
    #4 0x7f13af83935a in Demux ../../modules/demux/flac.c:379
    #5 0x7f13b0c2268c in demux_Demux ../../src/input/demux.c:223
    #6 0x55b831b8845d in demux_process_stream ../../test/src/input/demux-run.c:306
    #7 0x55b831b88549 in vlc_demux_process_url ../../test/src/input/demux-run.c:348
    #8 0x55b831b885ec in vlc_demux_process_path ../../test/src/input/demux-run.c:362
    #9 0x55b831b87453 in main ../../test/vlc-demux-run.c:50
    #10 0x7f13b0033d67 in __libc_start_call_main ../sysdeps/nptl/libc_start_call_main.h:58
    #11 0x7f13b0033e24 in __libc_start_main_impl ../csu/libc-start.c:360
    #12 0x55b831b872e0 in _start (/home/tom/work/git/vlc/build-ubsan/test/vlc-demux-dec-run+0x32e0) (BuildId: d8cc01556ecbf09f4bdade8e7e531725e5bbfc58)

Sample: clusterfuzz-testcase-minimized-vlc-demux-libfuzzer-4859969317502976

Edited by Thomas Guillem