packetizer: flac: avoid integer overflow

Fixes #29010
Fixes https://issues.oss-fuzz.com/issues/42503720

found-by: continuous fuzzing process https://github.com/google/oss-fuzz/tree/master/projects/vlc