modules/packetizer/flac.h
@@ -245,6 +245,10 @@ static inline int FLAC_ParseSyncInfo(const uint8_t *p_buf, unsigned i_buf,
     if (i_fsnumber == UINT64_MAX)
         return 0;
 
+    /* Invalid Sample/Frame number */
+    if (stream_info->total_samples != 0 && i_fsnumber > stream_info->total_samples)
+        return 0;
+
     i_header += i_read;
 
     /* Read blocksize */
